plugins {
	// The unobfuscated-Minecraft plugin id. The bare 'fabric-loom' id is the legacy one and
	// still demands a mappings dependency; 'net.fabricmc.fabric-loom-remap' is for 1.21.11
	// and older, which are still obfuscated.
	id 'net.fabricmc.fabric-loom' version '1.18.2'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	maven {
		name = 'Fabric'
		url = 'https://maven.fabricmc.net/'
	}
	mavenCentral()
}

dependencies {
	// No mappings dependency: Minecraft is shipped unobfuscated from 26.1 onwards, so the
	// names in the jar are the real ones. Yarn and intermediary stopped at 1.21.11, and the
	// `fabric-loom` plugin is the unobfuscated one (`fabric-loom-remap` is for 1.21.11 and older).
	//
	// There is no `modImplementation` either: that exists only to remap a dependency, and
	// nothing needs remapping any more.
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	// Only for the parts that are plain Java and can be tested without starting a game —
	// balance parsing, so far. Anything that touches Minecraft is tested on the dev server
	// instead, see docs/dev-environment.md.
	testImplementation "org.junit.jupiter:junit-jupiter:5.11.4"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

// Fabric's own test facilities: a `gametest` source set, a `gameTest` task that boots a dedicated
// server, and a `clientGameTest` task that boots a real client. Both get a run directory of their
// own under build/run, wiped before every run, so nothing carries over between runs.
// See docs/dev-environment.md.
fabricApi {
	configureTests {
		createSourceSet = true
		modId = 'hardcore-roguelite-test'
		eula = true
		enableGameTests = true
		enableClientGameTests = true
	}
}

tasks.named('test') {
	useJUnitPlatform()
	testLogging {
		events 'passed', 'failed', 'skipped'
	}
}

processResources {
	inputs.property 'version', project.version

	filesMatching('fabric.mod.json') {
		expand 'version': project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from('LICENSE') {
		rename { "${it}_${project.base.archivesName.get()}" }
	}
}
